<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/IPAddressPromptView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/IPPromptString"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/IPAddressEntryBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789.:"
        android:inputType="phone" >
        
    </EditText>

    <TextView
        android:id="@+id/PasswordPromptView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PasswordPromptString"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/PasswordEntryBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textVisiblePassword" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/SaveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SaveString" />

        <Button
            android:id="@+id/SyncNowButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/SyncNowTitle" />

    </LinearLayout>

    <ToggleButton
        android:id="@+id/SyncToggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ToggleString"
        android:textOff="@string/SyncOffString"
        android:textOn="@string/SyncOnString" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/LastSyncTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LastSyncTitleString"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/LastSyncTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="TextView" />

    </LinearLayout>

</LinearLayout>